věk sólo interpretů, drobné opravy dat

--- a/107 CZ100RADIO x místo původu.ipynb
+++ b/107 CZ100RADIO x místo původu.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d30a2642",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "20cb7721",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7fea7f98",
    "metadata": {},
    "outputs": [
@@ -73,74 +73,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>75521</th>\n",
-       "      <td>G-Eazy</td>\n",
+       "      <th>25944</th>\n",
+       "      <td>Sunrise Avenue</td>\n",
+       "      <td>Finsko</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17928</th>\n",
+       "      <td>Red Hot Chili Peppers</td>\n",
        "      <td>Spojené státy americké</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1101</th>\n",
-       "      <td>Victoria</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68068</th>\n",
-       "      <td>Robin Schulz</td>\n",
-       "      <td>Německo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3941</th>\n",
-       "      <td>Green Day</td>\n",
+       "      <th>4342</th>\n",
+       "      <td>Black Eyed Peas</td>\n",
        "      <td>Spojené státy americké</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43287</th>\n",
-       "      <td>Kristina</td>\n",
-       "      <td>Slovensko</td>\n",
+       "      <th>65540</th>\n",
+       "      <td>Jelen</td>\n",
+       "      <td>Česko</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73619</th>\n",
-       "      <td>Sigala</td>\n",
+       "      <th>2627</th>\n",
+       "      <td>Chinaski</td>\n",
+       "      <td>Česko</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>894</th>\n",
+       "      <td>Robbie Williams</td>\n",
        "      <td>Spojené království</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82048</th>\n",
-       "      <td>Timmy White</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>24591</th>\n",
+       "      <td>Kabát</td>\n",
+       "      <td>Česko</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9846</th>\n",
-       "      <td>Maroon 5</td>\n",
-       "      <td>Spojené státy americké</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44756</th>\n",
+       "      <th>44581</th>\n",
        "      <td>Calvin Harris</td>\n",
        "      <td>Spojené království</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71531</th>\n",
-       "      <td>Kygo</td>\n",
-       "      <td>Singapur</td>\n",
+       "      <th>19007</th>\n",
+       "      <td>Rihanna</td>\n",
+       "      <td>Barbados</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65784</th>\n",
+       "      <td>Sia</td>\n",
+       "      <td>Austrálie</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      interpret_hlavni             zeme_puvodu\n",
-       "75521           G-Eazy  Spojené státy americké\n",
-       "1101          Victoria                     NaN\n",
-       "68068     Robin Schulz                 Německo\n",
-       "3941         Green Day  Spojené státy americké\n",
-       "43287         Kristina               Slovensko\n",
-       "73619           Sigala      Spojené království\n",
-       "82048      Timmy White                     NaN\n",
-       "9846          Maroon 5  Spojené státy americké\n",
-       "44756    Calvin Harris      Spojené království\n",
-       "71531             Kygo                Singapur"
+       "            interpret_hlavni             zeme_puvodu\n",
+       "25944         Sunrise Avenue                  Finsko\n",
+       "17928  Red Hot Chili Peppers  Spojené státy americké\n",
+       "4342         Black Eyed Peas  Spojené státy americké\n",
+       "65540                  Jelen                   Česko\n",
+       "2627                Chinaski                   Česko\n",
+       "894          Robbie Williams      Spojené království\n",
+       "24591                  Kabát                   Česko\n",
+       "44581          Calvin Harris      Spojené království\n",
+       "19007                Rihanna                Barbados\n",
+       "65784                    Sia               Austrálie"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d07137d0",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "0.8373332159055881"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "860864c4",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "99d28369",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "38b7a623",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5bc9eb13",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "0d3bfce0",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "fd6cd048",
    "metadata": {
     "scrolled": true
@@ -352,7 +352,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "6e124bab",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "78d72221",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "bbf32a4c",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0c6e54b4",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
        "3.0069444444444446"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "feeac4a7",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
        "3.2883895131086143"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "id": "1d1256b0",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "id": "abc3d887",
    "metadata": {},
    "outputs": [],
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "id": "8a793038",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
        "Name: delka_pusobeni, dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "e1f6649b",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
        "0.04654895666131621"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "5a46afbb",
    "metadata": {},
    "outputs": [],
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "14fb87bf",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
        "Spojené království     folk                         1064"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
