--- a/108 CZ100RADIO x žánry.ipynb
+++ b/108 CZ100RADIO x žánry.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "id": "a8cf1cbd",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "id": "6ae6d00c",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "id": "24bb4cb3",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "id": "0b34d25b",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "id": "ae5afc1b",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "id": "518335b9",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "id": "3b8ba99b",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "id": "246aeb00",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 9,
    "id": "d0afd29f",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "id": "b6640e2a",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "id": "485543d9",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "id": "26fc4a8a",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "id": "fdc36d12",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 14,
    "id": "de68be35",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 15,
    "id": "60b697f2",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 16,
    "id": "7b8c4014",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 17,
    "id": "63787153",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 18,
    "id": "2b9f52f6",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -561,12 +561,12 @@
    "id": "325d248a",
    "metadata": {},
    "source": [
-    "## Zastoupenost jednotlivých žánrů v čase: varianta \"rovná se\""
+    "## Zastoupenost jednotlivých žánrů v čase: ručně sgrupnuté žánry"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 19,
    "id": "01fb0284",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
        " 'filmová hudba']"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 20,
    "id": "47fd4f87",
    "metadata": {},
    "outputs": [],
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 21,
    "id": "18bdf8ab",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 22,
    "id": "38149483",
    "metadata": {},
    "outputs": [
@@ -708,7 +708,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 23,
    "id": "76903695",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 24,
    "id": "fd5453d9",
    "metadata": {},
    "outputs": [
@@ -812,7 +812,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 25,
    "id": "e8cb33cb",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 26,
    "id": "a2b189d2",
    "metadata": {},
    "outputs": [
@@ -903,7 +903,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
