--- a/053 wikidata čištění 2.ipynb
+++ b/053 wikidata čištění 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "5f9e73ad",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "842c4314",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "c6320fe3",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "ca8be151",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "6130b6a3",
    "metadata": {},
    "outputs": [
@@ -59,37 +59,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_292\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n"
      ]
     },
@@ -337,7 +337,7 @@
        "25  spotify_odberatele         9        1142               9"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "c8944913",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "594569ea",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "e4a809e0",
    "metadata": {},
    "outputs": [],
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "d9fcda82",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "137dc3fa",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "520c4aa5",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "1779ae4f",
    "metadata": {},
    "outputs": [],
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "0b0afeac",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
        " 'Atmo Music']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,17 +580,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "4ad064c6",
+   "execution_count": 36,
+   "id": "168381bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[df['interpret_hlavni'] == 'Momo',\"datum_narozeni\"]=None"
+    "smazat_narozeni = ['Gold 1','Momo','Shaun Baker']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
+   "id": "4ad064c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['interpret_hlavni'].isin(smazat_narozeni),\"datum_narozeni\"]=None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "410751af",
    "metadata": {},
    "outputs": [],
@@ -600,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "1592d7bb",
    "metadata": {},
    "outputs": [],
@@ -614,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "1cffe1a1",
    "metadata": {},
    "outputs": [],
@@ -624,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "id": "43ebdfbe",
    "metadata": {},
    "outputs": [],
@@ -635,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "5adbc502",
    "metadata": {},
    "outputs": [],
@@ -645,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "id": "bffce5dd",
    "metadata": {},
    "outputs": [],
