dostažení dat do 1. 11. 2023 a refresh

--- a/116 CZ100RADIO podíl v ČRo.ipynb
+++ b/116 CZ100RADIO podíl v ČRo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "id": "03ddde3a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "id": "02844f12",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "id": "435a265f",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "id": "24bd8f30",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "id": "276b1fd1",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "id": "28ee866c",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_20964\\2931147685.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_14612\\2931147685.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "id": "658fd5a1",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "id": "c0f14f5c",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "id": "f7e90681",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "id": "82ba0116",
    "metadata": {},
    "outputs": [
@@ -163,10 +163,11 @@
        "2023-07    0.090583\n",
        "2023-08    0.087111\n",
        "2023-09    0.081270\n",
+       "2023-10    0.082470\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "id": "a07d99bb",
    "metadata": {
     "scrolled": true
@@ -186,10 +187,10 @@
     {
      "data": {
       "text/plain": [
-       "0.0820976625404727"
+       "0.0821086042382414"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "id": "792adef3",
    "metadata": {},
    "outputs": [],
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "id": "73d1d5f1",
    "metadata": {},
    "outputs": [
@@ -231,7 +232,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_20964\\3976064205.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_14612\\3976064205.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -246,9 +247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "id": "7f93cad4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -267,7 +270,7 @@
        "Name: interpret, Length: 983, dtype: object"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 15,
    "id": "6b1019e9",
    "metadata": {},
    "outputs": [],
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 16,
    "id": "01160a18",
    "metadata": {},
    "outputs": [
@@ -299,7 +302,7 @@
        "0.18123634093037777"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 17,
    "id": "b8adc7e6",
    "metadata": {},
    "outputs": [],
@@ -327,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 18,
    "id": "5ddd954e",
    "metadata": {},
    "outputs": [],
@@ -338,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 19,
    "id": "03965a7d",
    "metadata": {},
    "outputs": [
@@ -378,10 +381,11 @@
        "2023-07    0.173705\n",
        "2023-08    0.173483\n",
        "2023-09    0.162385\n",
+       "2023-10    0.162955\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,17 +396,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 20,
    "id": "0e41c1f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.17336460980615914"
+       "0.17305843881276828"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,39 +417,232 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cad1d4e1",
+   "id": "4dfe8164",
    "metadata": {},
    "source": [
-    "### Pokus: setrvačnost"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b2c327ba",
-   "metadata": {},
-   "source": [
-    "Podíl tracků z top 100 před 2 lety"
+    "## Podíl _všech_ interpretů z top 100 od r. 2006 do r. 2022 na vysílání RŽ v roce 2022"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "b1a25693",
+   "execution_count": 26,
+   "id": "abd06bad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vsechno_intepretstvo = df[df['rok'] < 2023]['interpret_hlavni'].apply(lambda x: x.lower()).drop_duplicates().to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1c356522",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>since</th>\n",
+       "      <th>id</th>\n",
+       "      <th>interpret</th>\n",
+       "      <th>interpret_id</th>\n",
+       "      <th>track</th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>stanice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>818937</th>\n",
+       "      <td>2020-12-01 00:38:45+01:00</td>\n",
+       "      <td>10236284</td>\n",
+       "      <td>jam</td>\n",
+       "      <td>2989</td>\n",
+       "      <td>set me free</td>\n",
+       "      <td>7480</td>\n",
+       "      <td>radiozurnal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>818938</th>\n",
+       "      <td>2020-12-01 00:42:25+01:00</td>\n",
+       "      <td>10236293</td>\n",
+       "      <td>wanastowi vjecy</td>\n",
+       "      <td>3068</td>\n",
+       "      <td>kouzlo</td>\n",
+       "      <td>7569</td>\n",
+       "      <td>radiozurnal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>818939</th>\n",
+       "      <td>2020-12-01 00:48:18+01:00</td>\n",
+       "      <td>10236306</td>\n",
+       "      <td>goodfellas</td>\n",
+       "      <td>5472</td>\n",
+       "      <td>supersmooth</td>\n",
+       "      <td>14913</td>\n",
+       "      <td>radiozurnal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>818940</th>\n",
+       "      <td>2020-12-01 00:51:48+01:00</td>\n",
+       "      <td>10236315</td>\n",
+       "      <td>donna summer</td>\n",
+       "      <td>3681</td>\n",
+       "      <td>this time i know it's for real</td>\n",
+       "      <td>11519</td>\n",
+       "      <td>radiozurnal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>818941</th>\n",
+       "      <td>2020-12-01 00:55:41+01:00</td>\n",
+       "      <td>10236326</td>\n",
+       "      <td>tomáš klus</td>\n",
+       "      <td>3098</td>\n",
+       "      <td>nenávratná</td>\n",
+       "      <td>16232</td>\n",
+       "      <td>radiozurnal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1037537</th>\n",
+       "      <td>2023-10-22 23:07:32+01:00</td>\n",
+       "      <td>19380454</td>\n",
+       "      <td>robbie williams</td>\n",
+       "      <td>2984</td>\n",
+       "      <td>come undone</td>\n",
+       "      <td>10429</td>\n",
+       "      <td>radiozurnal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1037538</th>\n",
+       "      <td>2023-10-22 23:15:56+01:00</td>\n",
+       "      <td>19380472</td>\n",
+       "      <td>babybird</td>\n",
+       "      <td>4569</td>\n",
+       "      <td>you're gorgeous</td>\n",
+       "      <td>11678</td>\n",
+       "      <td>radiozurnal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1037539</th>\n",
+       "      <td>2023-10-22 23:25:35+01:00</td>\n",
+       "      <td>19380489</td>\n",
+       "      <td>anna k</td>\n",
+       "      <td>3161</td>\n",
+       "      <td>údolí včel</td>\n",
+       "      <td>109184</td>\n",
+       "      <td>radiozurnal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1037540</th>\n",
+       "      <td>2023-10-22 23:34:17+01:00</td>\n",
+       "      <td>19380510</td>\n",
+       "      <td>emeli sandé</td>\n",
+       "      <td>4229</td>\n",
+       "      <td>read all about it</td>\n",
+       "      <td>36778</td>\n",
+       "      <td>radiozurnal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1037541</th>\n",
+       "      <td>2023-10-22 23:47:09+01:00</td>\n",
+       "      <td>19380537</td>\n",
+       "      <td>pet shop boys</td>\n",
+       "      <td>3158</td>\n",
+       "      <td>se a vida é</td>\n",
+       "      <td>13103</td>\n",
+       "      <td>radiozurnal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>218605 rows × 7 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.025116728385123167"
+       "                            since        id        interpret  interpret_id  \\\n",
+       "818937  2020-12-01 00:38:45+01:00  10236284              jam          2989   \n",
+       "818938  2020-12-01 00:42:25+01:00  10236293  wanastowi vjecy          3068   \n",
+       "818939  2020-12-01 00:48:18+01:00  10236306       goodfellas          5472   \n",
+       "818940  2020-12-01 00:51:48+01:00  10236315     donna summer          3681   \n",
+       "818941  2020-12-01 00:55:41+01:00  10236326       tomáš klus          3098   \n",
+       "...                           ...       ...              ...           ...   \n",
+       "1037537 2023-10-22 23:07:32+01:00  19380454  robbie williams          2984   \n",
+       "1037538 2023-10-22 23:15:56+01:00  19380472         babybird          4569   \n",
+       "1037539 2023-10-22 23:25:35+01:00  19380489           anna k          3161   \n",
+       "1037540 2023-10-22 23:34:17+01:00  19380510      emeli sandé          4229   \n",
+       "1037541 2023-10-22 23:47:09+01:00  19380537    pet shop boys          3158   \n",
+       "\n",
+       "                                  track  track_id      stanice  \n",
+       "818937                      set me free      7480  radiozurnal  \n",
+       "818938                           kouzlo      7569  radiozurnal  \n",
+       "818939                      supersmooth     14913  radiozurnal  \n",
+       "818940   this time i know it's for real     11519  radiozurnal  \n",
+       "818941                       nenávratná     16232  radiozurnal  \n",
+       "...                                 ...       ...          ...  \n",
+       "1037537                     come undone     10429  radiozurnal  \n",
+       "1037538                 you're gorgeous     11678  radiozurnal  \n",
+       "1037539                      údolí včel    109184  radiozurnal  \n",
+       "1037540              read all about it      36778  radiozurnal  \n",
+       "1037541                     se a vida é     13103  radiozurnal  \n",
+       "\n",
+       "[218605 rows x 7 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(radiozurnal[(radiozurnal['track'].isin(df[(df['rok'] == 2021) & (df['mesic'] == 9)]['track'].apply(lambda x: x.split(\"(\")[0].lower()).to_list())) & (radiozurnal['since'] >= '2023-09-01') & (radiozurnal['since'] <= '2023-09-30')]) / len(radiozurnal[(radiozurnal['since'] >= '2023-09-01') & (radiozurnal['since'] <= '2023-09-30')])"
+    "radiozurnal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "462082a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4405849611426171"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(radiozurnal[(radiozurnal['since'].dt.year == 2022) & (radiozurnal['interpret'].isin(vsechno_intepretstvo))]) / len(radiozurnal[(radiozurnal['since'].dt.year == 2022)])"
    ]
   }
  ],
